<resources>
    <string name="app_name">Quản Lí Vận Chuyển</string>
    <string name="TenVT">Tên Vật Tư</string>
    <string name="maVT">Mã VT</string>
    <string name="GiaVC">Giá VC</string>
    <string name="MaTT">Trạng Thái</string>
    <string name="DVTinh">ĐV tính</string>
    <string name="DSVT">DANH SÁCH VẬT TƯ</string>
    <string name="DSCT">DANH SÁCH CÔNG TRÌNH</string>
    <string name="MaCT">Mã Công Trình</string>
    <string name="TenCT">Tên Công Trình</string>
    <string name="DiaChi">Địa Chỉ</string>
    <string name="MaPVC">Mã Phiếu Vận Chuyển</string>
    <string name="ngayVC">Ngày Vận Chuyển</string>
    <string name="DSPVC">DANH SÁCH PHIẾU VẬN CHUYỂN</string>
    <string name="CTPVC">CHI TIẾT PHIẾU VẬN CHUYỂN</string>
    <string name="SL">Số Lượng</string>
    <string name="Cly">Cự Ly</string>
    <string name="admin">admin</string>
    <string name="admin_login">Administrator Login</string>
    <string name="supervisor">Supervisor</string>
    <string name="staff">Staff</string>
    <string name="enter_email_address">Email Address</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="welcome">Welcome !</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="supervisor_login">Supervisor Login</string>
    <string name="staff_login">Staff login</string>
    <string name="input_error_email">Enter email address</string>
    <string name="input_error_email_invalid">Enter a valid email address</string>
    <string name="input_error_password">Enter Password</string>
    <string name="input_error_password_length">Minmun password length is 6</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_add_staff">Add Staff</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_add_category">Add Category</string>
    <string name="menu_add_drug">Add Drug</string>
    <string name="delete_notice">Are you sure you want to delete this drug,clicking on the yes button will remove this drug permanently from the databse</string>
    <string name="logout">Logout</string>

    <string name="title_activity_supervisor_main">SupervisorMainActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_staff_main">StaffMainActivity</string>
    <string name="store">Store</string>
    <string-array name="marital_status">
        <item>Single</item>
        <item>Married</item>
        <item>Divorced</item>
        <item>Widowed</item>
    </string-array>


</resources>