<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#A5DDF6"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMaPVC"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            tool:text="MaPCV" />

        <TextView
            android:id="@+id/tvMaVT"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            tool:text="@string/maVT" />

        <TextView
            android:id="@+id/tvSoLuong"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            tool:text="@string/SL" />

        <TextView
            android:id="@+id/tvCuLy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            tool:text="@string/Cly" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_delete" />
        <ImageView
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@android:drawable/ic_menu_manage" />
    </LinearLayout>

</LinearLayout>