<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChiTietPVCActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/btnReturn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_revert"
            />
    <TextView
        android:id="@+id/txtPVC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/CTPVC"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <ImageButton
                android:id="@+id/imgbtn_addctvc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:foregroundTint="#FFFFFF"
                android:src="@android:drawable/ic_input_add" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/listCTVC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/txtMaPVC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="10dp"
                android:text="Mã Phiếu VC"
                android:textAlignment="textStart" />
            <TextView
                android:id="@+id/txmaVT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/maVT"
                android:textAlignment="textEnd" />
            <TextView
                android:id="@+id/txtSoLuong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/SL"
                android:textAlignment="textEnd" />


            <TextView
                android:id="@+id/txtNgayVC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/Cly"
                android:textAlignment="center" />


        </LinearLayout>

        <ListView
            android:id="@+id/lvCTVC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp" />

    </LinearLayout>
    </LinearLayout>

</LinearLayout>