<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CongTrinhActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btnReturn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_revert" />
        <ImageView
            android:id="@+id/btnGG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_dialog_map" />
        <TextView
            android:id="@+id/txtDSCT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/DSCT"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <ImageButton
                    android:id="@+id/imgbtn_addct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:backgroundTint="#FFFFFF"
                    android:foregroundTint="#FFFFFF"
                    android:src="@android:drawable/ic_input_add" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/listCT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtMaCT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:padding="10dp"
                    android:text="Ma CT"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/txtTenCT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/TenCT"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/txtDiaChi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:padding="10dp"
                    android:text="@string/DiaChi"
                    android:textAlignment="textEnd" />

            </LinearLayout>

            <ListView
                android:id="@+id/lvDSCT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>