<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThemVTActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:backgroundTint="#FFFFFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtDSVT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="SỬA VẬT TƯ"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAllCaps="true"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"

            android:orientation="vertical"
            android:padding="10dp"
            >

            <EditText
                android:id="@+id/edtTenVT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_email"
                android:drawablePadding="10dp"
                android:hint="@string/TenVT"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="#79000000" />
            <EditText
                android:id="@+id/edtDVTinh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_email"
                android:drawablePadding="10dp"
                android:hint="@string/DVTinh"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="#79000000" />
            <EditText
                android:id="@+id/edtGiaVC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_email"
                android:drawablePadding="10dp"
                android:hint="@string/GiaVC"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="#79000000" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/icon_galery"
                android:background="@drawable/shape_email"
                android:contentDescription="hinhNH"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnSuaVT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/black"
                    android:padding="15dp"
                    android:text="Sửa Vật Tư"
                    app:cornerRadius="25dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>